--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -43,8 +43,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Posicion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Snake.cs" />
     <Compile Include="Tablero.cs" />
     <Compile Include="Util.cs" />
   </ItemGroup>
