--- a/Snake/Snake.csproj
+++ b/Snake/Snake.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Direccion.cs" />
+    <Compile Include="Manzana.cs" />
     <Compile Include="Posicion.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
